# so_injection

./: Cargo.toml  README.org
example_so/: Cargo.toml
example_so/src/: lib.rs
src/: lib.rs  test.rs
