[package]
name = "so_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
example_so = {path="./example_so"}

[dependencies]
sysinfo = "0.29.7"
nix = "0.26.2"
proc-maps = "0.3.1"
goblin = "0.7.1"
block-modes = "0.8.1"
